--- a/SimpleFun57_RunnersMeetings/SimpleFun57_RunnersMeetings/SimpleFun57_RunnersMeetings.csproj
+++ b/SimpleFun57_RunnersMeetings/SimpleFun57_RunnersMeetings/SimpleFun57_RunnersMeetings.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\KataRunnersMeetings.cs" />
+    <Compile Include="Models\Kata.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
